--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
 	</head>
 
 	<body>
-		
+
+		<script id="taskTemplate" type="text/template">
+			<span><%= title %></span> <button class="edit">Edit</button> <button class="delete">Delete</button>			
+		</script>
+
+		<h1>My Tasks</h1>
 	</body>
 </html>
